[package]
name = "uvfits-rip"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
license = "MPL-2.0"

[features]
cfitsio-static = ["mwalib/cfitsio-static"]

[dependencies]
clap = { version = "3.2.0", features = ["derive", "wrap_help"] }
mwalib = "0.15.0"
ndarray = "0.15.4"
ndarray-npy = "0.8.1"
